@@ -43,36 +43,49 @@ H5get_libversion <- function( ) {
   .Call("_H5get_libversion", PACKAGE='rhdf5')
 }
 
-#' Close all open HDF5 handles
-#' 
-#' Occasionally references to HDF5 files, groups, datasets etc can be created
-#' and not closed correctly.  This function identifies all open handles and
-#' closes them.  It replaces the functionality previously supplied by
-#' [H5close()].
-#' 
-#' @return Doesn't return anything. Called for the side-effect of closing
-#' any open HDF5 handles.
-#' 
+#' Close open HDF5 handles
+#'
+#' This functions can be used in two ways.  Firstly, it can be passed one or
+#' more [H5IdComponent-class] objects and it'll will try to close all of them
+#' regardless of the whether they represent a file, group, dataset etc.  This
+#' can be easier than making multiple calls to [H5Fclose()], [H5Gclose()], etc.
+#'
+#' Secondly, cccasionally references to HDF5 files, groups, datasets etc can be
+#' created and not closed correctly.  Maybe because a function stopped before
+#' getting to the close statement, or the open handle was not assigned to an R
+#' variable.  If no arguments are provide this function identifies all open
+#' handles and closes them.
+#'
+#' @param ... One or more objects of class [H5IdComponent-class] which should be
+#'   closed.  If nothing is provided to the function, all open handles will be
+#'   closed.
+#'
+#' @return Doesn't return anything. Called for the side-effect of closing open
+#'   HDF5 handles.
+#'
 #' @author Mike Smith
 #' @keywords IO file
 #' @examples
-#' 
-#' 
+#'
+#'
 #' ## create an empty file and then re-open it
 #' h5createFile("ex_h5closeAll.h5")
 #' H5Fopen("ex_h5closeAll.h5")
-#' 
+#'
 #' ## list all open identifiers
 #' h5listIdentifier()
-#' 
+#'
 #' ## close all open identifiers and verify
 #' h5closeAll()
 #' h5listIdentifier()
-#' 
+#'
 #' @export h5closeAll
-h5closeAll <- function() {
+h5closeAll <- function(...) {
     
-    objects <- h5validObjects()
+    objects <- list(...)
+    if(length(objects) == 0) {
+      objects <- h5validObjects()
+    }
     invisible(lapply(objects, .H5close))
 }
 
