@@ -1,32 +1,25 @@
-## just some general tests for the moment
+library(rhdf5)
 
-# library(rhdf5)
-# tmp_file <- tempfile(fileext = ".h5")
-# h5createFile(tmp_file)
-# h5createGroup(tmp_file,"foo")
-# h5createGroup(tmp_file,"baa")
-# h5createGroup(tmp_file,"foo/foobaa")
-# h5ls(tmp_file)
-# 
-# rhdf5:::h5lsTest("/home/msmith/projects/hdf5_testing/myhdf5file.h5")
-# h5ls("/home/msmith/projects/hdf5_testing/myhdf5file.h5")
-# 
-# L <- .Call("_h5lsTest", H5Fopen("~/h5tutr_dset.h5")@ID, PACKAGE='rhdf5')
-# 
-# H5close()
-# h5ls("/home/msmith/projects/hdf5_testing/myhdf5file.h5")
-# 
-# 
-# 
-# 
-# 
-# fid <- H5Fopen("/home/msmith/projects/hdf5_testing/myhdf5file.h5")
-# gid <- H5Gopen(fid, "/foo")
-# fid2 <- H5Fopen("/home/msmith/projects/hdf5_testing/myhdf5file.h5")
-# oid <- H5Oopen(fid, "/foo")
-# objs <- h5validObjects()
-# 
-# H5Fclose(fid)
+h5File <- tempfile(pattern = "H5Close_", fileext = ".h5")
+h5createFile(h5File)
+h5write(1:10, file = h5File, name = "DS1")
 
+test_that("Object handles can be closed", {
+  ## open file and create orphan group
+  fid <- H5Fopen( h5File )
+  gid <- H5Gcreate_anon(fid)
+  did <- H5Dopen(fid, name = "DS1")
+  
+  expect_length(h5validObjects(), 3)
+  
+  ## close only the dataset
+  expect_silent(h5closeAll(did))
+  expect_length(h5validObjects(), 2)
+  
+  ## close the file and group ids
+  expect_silent(h5closeAll(gid, fid))
+  expect_length(h5validObjects(), 0)
+  
+})
 
 
